# mycurrency

./: README.md  pyproject.toml  test_currency_exchange.csv  test_provider.csv
mycurrency/broker/: admin.py  models.py
mycurrency/broker/core/: provider.py
mycurrency/broker/data/: provider.py
mycurrency/broker/management/commands/: update_providers.py
mycurrency/broker/migrations/: 0001_initial.py
mycurrency/broker/provider/base/: base_providers.py  providers_factory.py
mycurrency/broker/serialization/dto/: provider.py
mycurrency/broker/serialization/entity/: provider.py
mycurrency/currency_exchange/: admin.py  apps.py  dtos.py  entities.py  models.py  serializer.py  utils.py  views.py
mycurrency/currency_exchange/core/providers/: fixer_provider.py
mycurrency/currency_exchange/core/services/: currency.py  currency_exchange_rate.py
mycurrency/currency_exchange/data/repos/: currency.py  currency_exchange.py
mycurrency/currency_exchange/drf/: urls.py
mycurrency/currency_exchange/drf/views/: __init__.py  currency_exchange.py
mycurrency/currency_exchange/management/commands/: populate_from_csv.py
mycurrency/currency_exchange/migrations/: 0001_initial.py  0002_currencyexchangerate_uuid_and_more.py
mycurrency/currency_exchange/serialization/dto/: currency_exchange_rate.py
mycurrency/main/: asgi.py  base_models.py  constants.py  error_messages.py  settings.py  urls.py  utils.py  wsgi.py
mycurrency/main/mixins/drf/: __init__.py  (+1 more)
mycurrency/main/providers/: base_providers.py  providers_factory.py
mycurrency/mycurrency/: settings.py
(+3 files in other folders)
